--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(LabProg)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(LabProg main.cpp User.cpp User.h)
+add_executable(LabProg main.cpp User.cpp User.h Message.cpp Message.h)
